// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stamp renders 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  min-height: 24px;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  color: #eceff2;
  font-size: 12px;
  font-weight: 700;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  line-height: 1.4;
  min-height: 24px;
  color: #eceff2;
  border-color: #c0cad5;
  background-color: #f4f6f8;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 0px;
  padding-bottom: 0px;
  border-radius: 8px;
}

.c1 > svg {
  width: 14px;
  height: 14px;
}

<div
    class="c0"
  >
    <div
      class="c1"
      color="border.light"
    />
  </div>
</DocumentFragment>
`;

exports[`Stamp renders medium fill 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  min-height: 24px;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  color: #eceff2;
  font-size: 12px;
  font-weight: 700;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  line-height: 1.4;
  min-height: 24px;
  color: #001833;
  background-color: #eceff2;
  border-color: #eceff2;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 0px;
  padding-bottom: 0px;
  border-radius: 8px;
}

.c1 > svg {
  width: 14px;
  height: 14px;
}

<div
    class="c0"
  >
    <div
      class="c1"
      color="border.light"
    />
  </div>
</DocumentFragment>
`;

exports[`Stamp renders small fill 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  min-height: 24px;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  color: #eceff2;
  font-size: 10px;
  font-weight: 700;
  line-height: 1.4;
  line-height: 1.25;
  min-height: 20px;
  color: #001833;
  background-color: #eceff2;
  border-color: #eceff2;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 0px;
  padding-bottom: 0px;
  border-radius: 8px;
}

.c1 > svg {
  width: 12px;
  height: 12px;
}

<div
    class="c0"
  >
    <div
      class="c1"
      color="border.light"
    />
  </div>
</DocumentFragment>
`;

exports[`Stamp renders small size 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  min-height: 24px;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  color: #eceff2;
  font-size: 10px;
  font-weight: 700;
  line-height: 1.4;
  line-height: 1.25;
  min-height: 20px;
  color: #eceff2;
  border-color: #c0cad5;
  background-color: #f4f6f8;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 0px;
  padding-bottom: 0px;
  border-radius: 8px;
}

.c1 > svg {
  width: 12px;
  height: 12px;
}

<div
    class="c0"
  >
    <div
      class="c1"
      color="border.light"
    />
  </div>
</DocumentFragment>
`;
